@@ -209,6 +209,10 @@ SOURCE=.\ldap\apr_ldap_compat.c
 # End Source File
 # Begin Source File
 
+SOURCE=.\ldap\apr_ldap_init.c
+# End Source File
+# Begin Source File
+
 SOURCE=.\ldap\apr_ldap_url.c
 # End Source File
 # End Group
